#ifndef TABLEROW_H
#define TABLEROW_H

class TableRow {
 public:
  TableRow();
};

#endif  // TABLEROW_H